tests/fixtures/invalid/bool_bitor_bytes.py
# Cannot bitwise OR Bool and Bytes
x: int = True | b"hello"
